--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <header>
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
-          <a class="navbar-brand" href="/">
+          <a class="navbar-brand" href="index.html">
             <img
               src="https://images.vector-images.com/24/lesosibirsk_city_coa_n8037.gif"
               alt=""
@@ -51,7 +51,7 @@
                 <a class="nav-link" href="monuments.html">Памятники</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/temples.html">Храмы</a>
+                <a class="nav-link" href="temples.html">Храмы</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Музеи</a>
