--- a/monuments.html
+++ b/monuments.html
@@ -24,7 +24,7 @@
     <header>
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
-          <a class="navbar-brand" href="index.html">
+          <a class="navbar-brand" href="web-guide">
             <img
               src="https://images.vector-images.com/24/lesosibirsk_city_coa_n8037.gif"
               alt=""
