--- a/monuments.html
+++ b/monuments.html
@@ -11,7 +11,7 @@
     />
     <title>Памятники г.Лесосибирска</title>
     <!--Bootstrap CSS-->
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -24,7 +24,7 @@
     <header>
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
-          <a class="navbar-brand" href="/index.html">
+          <a class="navbar-brand" href="index.html">
             <img
               src="https://images.vector-images.com/24/lesosibirsk_city_coa_n8037.gif"
               alt=""
@@ -48,10 +48,10 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link" href="/monuments.html">Памятники</a>
+                <a class="nav-link" href="monuments.html">Памятники</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/temples.html">Храмы</a>
+                <a class="nav-link" href="temples.html">Храмы</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="museums.html">Музеи</a>
@@ -170,10 +170,10 @@
                     Памятник Памяти погибших в годы Великой Отечественной Войны
                     воздвигнут к 40-летию победы. Представляет собой фигуру
                     Скорбящего солдата. На плитах высечены имена военнослужащих,
-                    погибших в боях, умерших от ран, пропавших без ве­сти в годы
+                    погибших в боях, умерших от ран, пропавших без вести в годы
                     Великой Отечественной войны 1941 -1945 гг., призванных
-                    Ени­сейским райвоенкоматом через Маклаковский сель­ский
-                    совет из п. Маклако­во, д. Рудиковка, д. Костыльникова.
+                    Енисейским райвоенкоматом через Маклаковский сельский
+                    совет из п. Маклаково, д. Рудиковка, д. Костыльникова.
                     Также на плитах были высечены имена воинов, погибших в
                     Афганистане, Чечне и других локальных войнах.
                   </p>
@@ -213,7 +213,7 @@
                     стояли анархисты. Движущей силой были дезертиры, которые
                     уклонялись от службы в колчаковской армии. Молодые сибиряки
                     предпочитали скрываться в тайге, чем отправляться на фронт.
-                    Восстание началось с Енисейс­ка - солдаты гарнизона
+                    Восстание началось с Енисейска - солдаты гарнизона
                     разоружили немногочисленные верные правительству части,
                     заняли тюрьму, из которой освободили находящихся здесь с
                     лета 1918 года красногвардейцев. Несмотря на укрепления
