--- a/monuments/monument4.html
+++ b/monuments/monument4.html
@@ -85,7 +85,7 @@
             утверждают, что во главе восстания стояли анархисты. Движущей силой
             были дезертиры, которые уклонялись от службы в колчаковской армии.
             Молодые сибиряки предпочитали скрываться в тайге, чем отправляться
-            на фронт. Восстание началось с Енисейс­ка - солдаты гарнизона
+            на фронт. Восстание началось с Енисейска - солдаты гарнизона
             разоружили немногочисленные верные правительству части, заняли
             тюрьму, из которой освободили находящихся здесь с лета 1918 года
             красногвардейцев. Несмотря на укрепления белые обошли позиции
