--- a/temples/temple3.html
+++ b/temples/temple3.html
@@ -11,7 +11,7 @@
     />
     <title>Храмы г.Лесосибирска</title>
     <!--Bootstrap CSS-->
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -24,7 +24,7 @@
     <header>
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
-          <a class="navbar-brand" href="/index.html">
+          <a class="navbar-brand" href="index.html">
             <img
               src="https://images.vector-images.com/24/lesosibirsk_city_coa_n8037.gif"
               alt=""
@@ -48,16 +48,16 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link" href="/monuments.html">Памятники</a>
+                <a class="nav-link" href="monuments.html">Памятники</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/temples.html">Храмы</a>
+                <a class="nav-link" href="temples.html">Храмы</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/museums.html">Музеи</a>
+                <a class="nav-link" href="museums.html">Музеи</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/dosug.html">Досуг</a>
+                <a class="nav-link" href="dosug.html">Досуг</a>
               </li>
             </ul>
           </div>
@@ -70,7 +70,7 @@
       <div class="row d-block" style="padding-bottom: 30px">
         <div class="col">
           <img
-            src="/images/temples/Храм Святого Апостола Андрея Первозванного.jpg"
+            src="images/temples/Храм Святого Апостола Андрея Первозванного.jpg"
             class="rounded float-start mw-100"
             alt="Храм Святого Апостола Андрея Первозванного"
             style="padding-right: 20px"
