--- a/monuments/monument1.html
+++ b/monuments/monument1.html
@@ -11,7 +11,7 @@
     />
     <title>Памятники г.Лесосибирска</title>
     <!--Bootstrap CSS-->
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="../css/style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -71,7 +71,7 @@
       <div class="row d-block" style="padding-bottom: 30px">
         <div class="col">
           <img
-            src="/images/monuments/памятник Ефиму Белинскому.jpg"
+            src="../images/monuments/памятник Ефиму Белинскому.jpg"
             class="float-lg-start mw-100"
             alt="памятник Ефиму Белинскому"
             style="padding-right: 20px"
